Revert "fix weird overflow"
This reverts commit 3c4abccaa6038fe1977aeda8be312ede489a6001.

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7623,9 +7623,3 @@ body {
 .toggle-reply-mobile > i {
 	margin-top: 0.35rem !important;
 }
-
-@media (max-width: 768px) {
-	.report {
-		max-width: 70vw;
-	}
-}
